feat: add credit page all

--- a/credit.html
+++ b/credit.html
@@ -106,69 +106,69 @@
           </div>
         </div>
       </div>
-      <div class="header__main-container container">
+      <!-- <div class="header__main-container container">
         <ul class=" header__breadcrumb">
           <li><a href="#">Главная</a></li>
           <li><a href="#">Каталог кухонь</a></li>
           <li><a href="#">Современные</a></li>
           <li>Кухня комбинация массив дуба и белая краска</li>
         </ul>
-      </div>
+      </div> -->
 
     </header>
     <main>
       <section class="credit">
         <div class="credit__container container">
           <h2 class="credit__title">Рассрочка и кредит</h2>
-          <h3 class="credit__prepare-subtitle credit__subtitle">Готовьте с любовью уже сейчас!
+          <h3 class="credit__prepare-subtitle text-middle">Готовьте с любовью уже сейчас!
           </h3>
-          <p class="credit__desc">Кредитные программы рассрочки от ХоумКредитБанка</p>
+          <p class="credit__prepare-desc title-small">Кредитные программы рассрочки от ХоумКредитБанка</p>
           <img src="./assets/img/svg/home-credit-bank.svg" class="credit__logo-bank" alt="">
-          <h4 class="credit__conditions-title">
+          <h4 class="credit__conditions-title credit__titles-weak-block">
             Кредит можно оформить на весь ассортимент товаров и услуг.
           </h4>
-          <p class="credit__conditions-desc">
+          <p class="credit__conditions-desc title-small">
             Не откладывайте долгожданные покупки, позвольте их себе именно сейчас!
             <br>Узнать условия кредитования можно у сотрудника Банка.
             <br>Просто и доступно!
           </p>
-          <ul class="credit__conditions-list">
+          <ul class="credit__conditions-list title-small">
             <li class="credit__conditions-item">Оформление кредита без похода в банк.</li>
             <li class="credit__conditions-item">Рассмотрение кредитной заявки в течение 15—30 минут.</li>
             <li class="credit__conditions-item">Требуется минимальный пакет документов.</li>
             <li class="credit__conditions-item">Вы сами выбираете удобные для Вас условия кредитования.</li>
           </ul>
-          <h4 class="credit__arrange-title">
+          <h4 class="credit__arrange-title credit__titles-weak-block">
             Как оформить
           </h4>
-          <p class="credit__arrange-desc">В розничных магазинах.</p>
-          <h4 class="credit__documents-title">
+          <p class="credit__arrange-desc title-small">В розничных магазинах.</p>
+          <h4 class="credit__documents-title credit__titles-weak-block">
             Необходимые документы:
           </h4>
-          <h5 class="credit__documents-subtitle">
+          <h5 class="credit__documents-subtitle title-small">
             Вам обязательно понадобится паспорт гражданина РФ.
           </h5>
-          <p class="credit__documents-explanation">По желанию один из документов на выбор: водительские права,
+          <p class="credit__documents-explanation title-small">По желанию один из документов на выбор: водительские права,
             заграничный паспорт, страховое свидетельство государственного пенсионного страхования РФ или свидетельство о
             выдаче ИНН.</p>
 
-          <ol class="credit__steps-list">
-            <li class="credit__step">Выберите товар;</li>
-            <li class="credit__step">Ваш персональный консультант вместе с Вами заполнит кредитную заявку и дождется
-              решения Банка (обычно это занимает 15 минут);</li>
-            <li class="credit__step">В случае положительного решения Банка, Вы на месте подписываете кредитный договор.
-              В случае отрицательного решения, Вы можете оплатить товар наличными, банковской картой.</li>
-            <li class="credit__step">Далее Вам остается только совершать платежи по кредиту, согласно условиям договора.
-            </li>
-          </ol>
-          <h3 class="credit__instalments-subtitle credit__subtitle">
+          <ul class="credit__steps-list title-small">
+            <li class="credit__step"><span class="decoration-text">Выберите товар;</span></li>
+            <li class="credit__step"><span class="decoration-text">Ваш персональный консультант вместе с Вами заполнит кредитную заявку и дождется
+              решения Банка (обычно это занимает 15 минут);</span></li>
+            <li class="credit__step"><span class="decoration-text">В случае положительного решения Банка, Вы на месте подписываете кредитный договор.
+              В случае отрицательного решения, Вы можете оплатить товар наличными, банковской картой.</span></li>
+            <li class="credit__step"><span class="decoration-text">Далее Вам остается только совершать платежи по кредиту, согласно условиям договора.
+            </span></li>
+          </ul>
+          <h3 class="credit__installments-subtitle text-middle">
             Программы РАССРОЧКИ от Beloni.
           </h3>
-          <p class="credit__instalment-desc">Это не оформление кредита – это возможность покупки кухни с минимальным
+          <p class="credit__instalment-desc title-small">Это не оформление кредита – это возможность покупки кухни с минимальным
             первоначальным взносом. Идеальный вариант для тех, кто планирует кухню заранее, так как мы можем расширить
             срок исполнения догвоора на комфортное для Вас время!</p>
-          <img src="./assets/img/svg/logo/logo-back-red.svg" alt="">
-          <ul class="credit__benefits-list">
+          <img src="./assets/img/svg/logo/logo-back-red.svg" class="credit__logo-back-red" alt="">
+          <ul class="credit__benefits-list title-small">
             <li class="credit__benefit">Оформление кредита без похода в банк.</li>
             <li class="credit__benefit">Оформите наш стандартный договор. Скажите менеджеру, что Вы хотите
               воспользоваться внутренней рассрочкой BELONI с минимальным первоначальным платежом.</li>
@@ -176,7 +176,7 @@
             <li class="credit__benefit">Оставшиеся 70% разбиваются на 2 этапа: еще 30% Вы вносите в середине исполнения
               договора, оставшеюся часть – перед отгрузкой товара к Вам на адрес.</li>
           </ul>
-          <p class="credit__licence">Кредит предоставляется банками:
+          <p class="credit__license credit__titles-weak-block">Кредит предоставляется банками:
             «Хоум Кредит энд Финанс Банк» ОГРН: 1027700280937. Генеральная лицензия № 316 Банка России от 15 марта 2012
             г</p>
         </div>
