feat: add questions page

--- a/questions.html
+++ b/questions.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
-  <title>Credit</title>
+  <title>Questions</title>
 </head>
 
 
@@ -107,68 +107,39 @@
 
     </header>
     <main>
-      <section class="credit">
-        <div class="credit__container container">
-          <h2 class="credit__title">Рассрочка и кредит</h2>
-          <h3 class="credit__prepare-subtitle text-middle">Готовьте с любовью уже сейчас!
-          </h3>
-          <p class="credit__prepare-desc title-small">Кредитные программы рассрочки от ХоумКредитБанка</p>
-          <img src="./assets/img/svg/home-credit-bank.svg" class="credit__logo-bank" alt="">
-          <h4 class="credit__conditions-title credit__titles-weak-block">
-            Кредит можно оформить на весь ассортимент товаров и услуг.
-          </h4>
-          <p class="credit__conditions-desc title-small">
-            Не откладывайте долгожданные покупки, позвольте их себе именно сейчас!
-            <br>Узнать условия кредитования можно у сотрудника Банка.
-            <br>Просто и доступно!
-          </p>
-          <ul class="credit__conditions-list title-small">
-            <li class="credit__conditions-item">Оформление кредита без похода в банк.</li>
-            <li class="credit__conditions-item">Рассмотрение кредитной заявки в течение 15—30 минут.</li>
-            <li class="credit__conditions-item">Требуется минимальный пакет документов.</li>
-            <li class="credit__conditions-item">Вы сами выбираете удобные для Вас условия кредитования.</li>
+      <section class="questions">
+        <div class="questions__container container">
+          <h2 class="questions__title title-page">Вопрос-ответ</h2>
+          <ul class="questions__list">
+            <li class="question__item">
+              <div class="question__item-wrapper">
+                <h4 class="question__item-text">Какой срок службы у кухни?</h4>
+                <img src="./assets/img/png/triangle.png" class="triangle triangle-down" alt="">
+              </div>
+              <p class="question__item-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem laboriosam odio provident ducimus facilis inventore culpa eius libero qui accusamus architecto sunt, possimus sequi soluta dolores tempora ut. Placeat, earum.</p>
+            </li>
+            <li class="question__item">
+              <div class="question__item-wrapper">
+                <h4 class="question__item-text">Какой срок службы у кухни?</h4>
+                <img src="./assets/img/png/triangle.png" class="triangle triangle-down" alt="">
+              </div>
+              <p class="question__item-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem laboriosam odio provident ducimus facilis inventore culpa eius libero qui accusamus architecto sunt, possimus sequi soluta dolores tempora ut. Placeat, earum.</p>
+            </li>
+            <li class="question__item">
+              <div class="question__item-wrapper">
+                <h4 class="question__item-text">Какой срок службы у кухни?</h4>
+                <img src="./assets/img/png/triangle.png" class="triangle triangle-down" alt="">
+              </div>
+              <p class="question__item-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem laboriosam odio provident ducimus facilis inventore culpa eius libero qui accusamus architecto sunt, possimus sequi soluta dolores tempora ut. Placeat, earum.</p>
+            </li>
+            <li class="question__item">
+              <div class="question__item-wrapper">
+                <h4 class="question__item-text">Какой срок службы у кухни?</h4>
+                <img src="./assets/img/png/triangle.png" class="triangle triangle-down" alt="">
+              </div>
+              <p class="question__item-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem laboriosam odio provident ducimus facilis inventore culpa eius libero qui accusamus architecto sunt, possimus sequi soluta dolores tempora ut. Placeat, earum.</p>
+            </li>
           </ul>
-          <h4 class="credit__arrange-title credit__titles-weak-block">
-            Как оформить
-          </h4>
-          <p class="credit__arrange-desc title-small">В розничных магазинах.</p>
-          <h4 class="credit__documents-title credit__titles-weak-block">
-            Необходимые документы:
-          </h4>
-          <h5 class="credit__documents-subtitle title-small">
-            Вам обязательно понадобится паспорт гражданина РФ.
-          </h5>
-          <p class="credit__documents-explanation title-small">По желанию один из документов на выбор: водительские права,
-            заграничный паспорт, страховое свидетельство государственного пенсионного страхования РФ или свидетельство о
-            выдаче ИНН.</p>
-
-          <ul class="credit__steps-list title-small">
-            <li class="credit__step"><span class="decoration-text">Выберите товар;</span></li>
-            <li class="credit__step"><span class="decoration-text">Ваш персональный консультант вместе с Вами заполнит кредитную заявку и дождется
-              решения Банка (обычно это занимает 15 минут);</span></li>
-            <li class="credit__step"><span class="decoration-text">В случае положительного решения Банка, Вы на месте подписываете кредитный договор.
-              В случае отрицательного решения, Вы можете оплатить товар наличными, банковской картой.</span></li>
-            <li class="credit__step"><span class="decoration-text">Далее Вам остается только совершать платежи по кредиту, согласно условиям договора.
-            </span></li>
-          </ul>
-          <h3 class="credit__installments-subtitle text-middle">
-            Программы РАССРОЧКИ от Beloni.
-          </h3>
-          <p class="credit__instalment-desc title-small">Это не оформление кредита – это возможность покупки кухни с минимальным
-            первоначальным взносом. Идеальный вариант для тех, кто планирует кухню заранее, так как мы можем расширить
-            срок исполнения догвоора на комфортное для Вас время!</p>
-          <img src="./assets/img/svg/logo/logo-back-red.svg" class="credit__logo-back-red" alt="">
-          <ul class="credit__benefits-list title-small">
-            <li class="credit__benefit">Оформление кредита без похода в банк.</li>
-            <li class="credit__benefit">Оформите наш стандартный договор. Скажите менеджеру, что Вы хотите
-              воспользоваться внутренней рассрочкой BELONI с минимальным первоначальным платежом.</li>
-            <li class="credit__benefit">Внесите аванс всего 30% вместо 50%</li>
-            <li class="credit__benefit">Оставшиеся 70% разбиваются на 2 этапа: еще 30% Вы вносите в середине исполнения
-              договора, оставшеюся часть – перед отгрузкой товара к Вам на адрес.</li>
-          </ul>
-          <p class="credit__license credit__titles-weak-block">Кредит предоставляется банками:
-            «Хоум Кредит энд Финанс Банк» ОГРН: 1027700280937. Генеральная лицензия № 316 Банка России от 15 марта 2012
-            г</p>
         </div>
       </section>
       <section class="salons">
