--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
                 <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
                 <span class="card__sale">-21%</span>
                 <!-- <span class="card__stock card__stock--store">В наличии на складе</span> -->
-                <!-- <button class="card__favorite favorite">❤</button> -->
+                <!-- <button class="slider__favorite favorite" aria-label="Добавить в избранные"><svg width="18" height="16" viewBox="0 0 18 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.75 4.96875C17.75 10.4375 9.64141 14.8641 9.29609 15.0469C9.20508 15.0958 9.10335 15.1215 9 15.1215C8.89665 15.1215 8.79492 15.0958 8.70391 15.0469C8.35859 14.8641 0.25 10.4375 0.25 4.96875C0.251447 3.68455 0.762235 2.45337 1.6703 1.5453C2.57837 0.637235 3.80955 0.126447 5.09375 0.125C6.70703 0.125 8.11953 0.81875 9 1.99141C9.88047 0.81875 11.293 0.125 12.9062 0.125C14.1904 0.126447 15.4216 0.637235 16.3297 1.5453C17.2378 2.45337 17.7486 3.68455 17.75 4.96875Z"/>
+                  </svg></button> -->
               </div>
               <p class="card__description">Кухня с белыми рифлёными фасадами</p>
               <div class="card__pricing">
@@ -184,8 +186,6 @@
               <div class="card__image">
                 <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
                 <span class="card__sale">-21%</span>
-                <!-- <span class="card__stock card__stock--store">В наличии на складе</span> -->
-                <!-- <button class="card__favorite favorite">❤</button> -->
               </div>
               <p class="card__description">Кухня с белыми рифлёными фасадами</p>
               <div class="card__pricing">
@@ -210,8 +210,6 @@
               <div class="card__image">
                 <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
                 <span class="card__sale">-21%</span>
-                <!-- <span class="card__stock card__stock--store">В наличии на складе</span> -->
-                <!-- <button class="card__favorite favorite">❤</button> -->
               </div>
               <p class="card__description">Кухня с белыми рифлёными фасадами</p>
               <div class="card__pricing">
@@ -236,8 +234,6 @@
               <div class="card__image">
                 <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
                 <span class="card__sale">-21%</span>
-                <!-- <span class="card__stock card__stock--store">В наличии на складе</span> -->
-                <!-- <button class="card__favorite favorite">❤</button> -->
               </div>
               <p class="card__description">Кухня с белыми рифлёными фасадами</p>
               <div class="card__pricing">
