--- a/product.html
+++ b/product.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
   <title>Product Page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -98,7 +101,7 @@
         <li>Кухня комбинация массив дуба и белая краска</li>
       </ul>
     </div>
-    
+
   </header>
   <section class="product">
     <div class="product__container container">
@@ -122,7 +125,9 @@
                     fill="#232323" />
                 </svg>
               </button>
-              <button class="slider__favorite favorite">❤</button>
+              <button class="slider__favorite favorite" aria-label="Добавить в избранные"><svg width="18" height="16" viewBox="0 0 18 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M17.75 4.96875C17.75 10.4375 9.64141 14.8641 9.29609 15.0469C9.20508 15.0958 9.10335 15.1215 9 15.1215C8.89665 15.1215 8.79492 15.0958 8.70391 15.0469C8.35859 14.8641 0.25 10.4375 0.25 4.96875C0.251447 3.68455 0.762235 2.45337 1.6703 1.5453C2.57837 0.637235 3.80955 0.126447 5.09375 0.125C6.70703 0.125 8.11953 0.81875 9 1.99141C9.88047 0.81875 11.293 0.125 12.9062 0.125C14.1904 0.126447 15.4216 0.637235 16.3297 1.5453C17.2378 2.45337 17.7486 3.68455 17.75 4.96875Z"/>
+                </svg></button>
             </div>
             <ul class="slider__list">
               <li class="slider__item"><img src="./assets/img/png/product-img-2.png" alt=""></li>
