feat: add pagination for catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -574,6 +574,14 @@
               </div>
             </li>
           </ul>
+          <div class="pagination">
+            <ul class="pagination__list">
+              <li class="pagination__item pagination__item--active"><button>1</button></li>
+              <li class="pagination__item"><button>2</button></li>
+              <li class="pagination__item"><button>...</button></li>
+              <li class="pagination__item"><button>25</button></li>
+            </ul>
+          </div>
         </section>
       </div>
 
