feat: add blog page

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         </ul>
       </div>
     </section>
-    <section class="blog">
+    <section class="blog blog--main">
       <div class="blog__container container">
         <h2 class="blog__title">
           Блог
