refactoring index.js

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,11 @@
   <title>Блог</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <header class="header">
     <div class="header__menu">
@@ -122,11 +126,12 @@
             <span class="action__title">Вид</span>
 
             <div class="radio">
-              <input class="radio__input" type="radio" name="view" id="radio-grid" value="grid"  aria-label="Плитка" checked>
+              <input class="radio__input" type="radio" name="view" id="radio-grid" value="grid" aria-label="Плитка"
+                checked>
             </div>
 
             <div class="radio">
-              <input class="radio__input" type="radio" name="view" id="radio-list" value="list"  aria-label="Список">
+              <input class="radio__input" type="radio" name="view" id="radio-list" value="list" aria-label="Список">
             </div>
           </li>
         </ul>
@@ -135,7 +140,10 @@
             <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
             <p class="blog__card-date">1 июня 2024</p>
             <p class="blog__card-desc">Какие критерии важны для оценки качества кухни?</p>
-            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
+            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих
+              материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут
+              быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности
+              (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
             <a href="" class="blog__card-link">Читать далее
               <img src="./assets/img/svg/arrowMenu.svg" alt="">
             </a>
@@ -144,7 +152,10 @@
             <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
             <p class="blog__card-date">1 июня 2024</p>
             <p class="blog__card-desc">Какие критерии важны для оценки качества кухни?</p>
-            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
+            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих
+              материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут
+              быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности
+              (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
             <a href="" class="blog__card-link">Читать далее
               <img src="./assets/img/svg/arrowMenu.svg" alt="">
             </a>
@@ -153,7 +164,10 @@
             <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
             <p class="blog__card-date">1 июня 2024</p>
             <p class="blog__card-desc">Рецепт современной кухни</p>
-            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
+            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих
+              материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут
+              быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности
+              (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
             <a href="" class="blog__card-link">Читать далее
               <img src="./assets/img/svg/arrowMenu.svg" alt="">
             </a>
@@ -162,7 +176,10 @@
             <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
             <p class="blog__card-date">1 июня 2024</p>
             <p class="blog__card-desc">Рецепт современной кухни</p>
-            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
+            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих
+              материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут
+              быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности
+              (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
             <a href="" class="blog__card-link">Читать далее
               <img src="./assets/img/svg/arrowMenu.svg" alt="">
             </a>
@@ -171,7 +188,10 @@
             <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
             <p class="blog__card-date">1 июня 2024</p>
             <p class="blog__card-desc">Рецепт современной кухни</p>
-            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
+            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих
+              материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут
+              быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности
+              (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
             <a href="" class="blog__card-link">Читать далее
               <img src="./assets/img/svg/arrowMenu.svg" alt="">
             </a>
@@ -180,7 +200,10 @@
             <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
             <p class="blog__card-date">1 июня 2024</p>
             <p class="blog__card-desc">Рецепт современной кухни</p>
-            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
+            <p class="blog__card-text">Практически все кухонные сеты, независимо от производителя, изготовлены из схожих
+              материалов: основа — это ламинированная древесно-стружечная плита (ДСП), а наружные двери (фасады) — могут
+              быть из натурального дерева, ДСП с различным покрытием или древесно-волокнистой плиты средней плотности
+              (МДФ). Сравнивая с европейскими стандартами, каркас обычно изготавливается из 18 мм Д...</p>
             <a href="" class="blog__card-link">Читать далее
               <img src="./assets/img/svg/arrowMenu.svg" alt="">
             </a>
@@ -217,11 +240,12 @@
             </div>
             <div class="text-field-salons">
               <label class="text-field__label" for="salons">Выберите салон</label>
-              <input class="text-field__input" type="text" name="salons" list="listSalons"
-                placeholder="Список салонов">
-              <datalist id="listSalons">
-                <option value="some text">some text</option>
-              </datalist>
+              <input class="text-field__input" type="text" name="salons" list="listSalons" placeholder="Список салонов">
+              <div class="select-wrapper">
+                <datalist id="listSalons">
+                  <option value="some text">some text</option>
+                </datalist>
+              </div>
             </div>
             <button class="button salons__button button-red">Записаться в салон</button>
             <div class="text-warning">Нажимая на кнопку записаться в салон, я принимаю условия <span>политики
@@ -350,22 +374,23 @@
       </div>
     </div>
   </footer>
-
+<script src="./index.js"></script>
   <script>
-    const blogCardsEl = document.querySelector(".blog__cards");
-    const viewRadiobuttonsListEl = document.querySelectorAll("input[name='view']");
+    // const blogCardsEl = document.querySelector(".blog__cards");
+    // const viewRadiobuttonsListEl = document.querySelectorAll("input[name='view']");
 
-    const radioHandler = (event) => {
-      if (event.target.value === "list") {
-        blogCardsEl.classList.add("blog__cards--list");
-      } else {
-        blogCardsEl.classList.remove("blog__cards--list");
-      }
-    };
+    // const radioHandler = (event) => {
+    //   if (event.target.value === "list") {
+    //     blogCardsEl.classList.add("blog__cards--list");
+    //   } else {
+    //     blogCardsEl.classList.remove("blog__cards--list");
+    //   }
+    // };
 
-    viewRadiobuttonsListEl.forEach(viewRadio => {
-      viewRadio.addEventListener("change", radioHandler);
-    })
+    // viewRadiobuttonsListEl.forEach(viewRadio => {
+    //   viewRadio.addEventListener("change", radioHandler);
+    // })
   </script>
 </body>
+
 </html>
