fix: change styles in menu and header menu

--- a/index.html
+++ b/index.html
@@ -554,14 +554,24 @@
     <div class="container container__menu">
       <input type="text" class="input menu__header-input" placeholder="Что будем искать?">
       <ul class="menu__list active">
-        <li class="menu__item menu__item-catalog hide">Каталог<img src="./assets/img/png/triangle.png"
-            class="triangle triangle-down" alt="ico triangle"></li>
-        <li class="menu__item">Доставка и оплата</li>
-        <li class="menu__item"><a href="/aboutUs">О компании</a></li>
-        <li class="menu__item"><a href="/services">Услуги</a></li>
-        <li class="menu__item"><a href="/clients">Клиентам</a></li>
-        <li class="menu__item"><a href="/partners">Партнерам</a></li>
-        <li class="menu__item"><a href="/contacts">Контакты</a></li>
+        <li class="menu__item menu__item-catalog hide">
+          <a href="/catalog.html" class="menu__item-link">
+            Каталог<img src="./assets/img/png/triangle.png" class="triangle triangle-down" alt="ico triangle">
+          </a>
+        </li>
+        <li class="menu__item"><a href="/credit.html">Доставка и оплата</a></li>
+        <li class="menu__item"><a href="/about.html">О компании</a>
+        </li>
+        <li class="menu__item"><a href="/services.html">Услуги</a>
+        </li>
+        <li class="menu__item"><a href="/clients.html">Клиентам</a>
+        </li>
+        <li class="menu__item"><a href="/partners.html">Партнерам</a>
+        </li>
+        <li class="menu__item"><a href="/reviews.html">Отзывы</a>
+        </li>
+        <li class="menu__item"><a href="/contacts.html">Контакты</a>
+        </li>
       </ul>
       <div class="menu__section section-style">
         <div class="container-text" id="section__style">
